// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Actions Action and method 1`] = `
<button
  class="button"
  onclick={[Function]}
>
  Click me to log the action
</button>
`;

exports[`Storyshots Addons|Actions Action only 1`] = `
<button
  class="button"
  onclick={[Function]}
>
  Click me to log the action
</button>
`;

exports[`Storyshots Addons|Actions Multiple actions 1`] = `
<button
  class="button"
  onclick={[Function]}
  ondblclick={[Function]}
>
  (Double) click me to log the action
</button>
`;

exports[`Storyshots Addons|Actions Multiple actions, object 1`] = `
<button
  class="button"
  onclick={[Function]}
  ondblclick={[Function]}
>
  (Double) click me to log the action
</button>
`;
